Datasource url changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 
 
 #Database connection setting
-spring.datasource.url=jdbc:postgresql://localhost:5432/ipredictworld
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ipredictworld
 spring.datasource.driver-class=org.postgresql.Driver;
-spring.datasource.username = postgres
-spring.datasource.password=patrick
+#spring.datasource.username = postgres
+#spring.datasource.password=patrick
+spring.datasource.url=${JDBC_DATABASE_URL}
+
 spring.datasource.removeAbandoned = true
 spring.jpa.hibernate.ddl-auto = update
 spring.session.jdbc.initialize-schema=always
