--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.flyway.baseline-on-migrate=true
 
 ## Application Details
 
-info.app.name = Electronic Document Management System
-info.app.description = Management system that can be used to move document from one level of the office to another effectively
+info.app.name = IPredict World
+info.app.description = Prediction System to Manage Match Prediction
 info.app.version = 1.0.0
 
 #multipart details
