--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,5 @@ spring.servlet.multipart.location=${java.io.tmpdir}
 
 
 spring.jackson.serialization.fail-on-empty-beans=false
+
+logging.level.org.springframework.web=DEBUG
